<!--
  ~ Copyright © 2017-2023  Kynetics  LLC
  ~
  ~ This program and the accompanying materials are made
  ~ available under the terms of the Eclipse Public License 2.0
  ~ which is available at https://www.eclipse.org/legal/epl-2.0/
  ~
  ~ SPDX-License-Identifier: EPL-2.0
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/shared_preferences_is_enable_key"
        android:summary="@string/shared_preferences_is_enable_summary"
        android:title="@string/shared_preferences_is_enable_title" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <com.kynetics.uf.android.ui.preferences.EditTextValidateNotEmptyPreference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_server_url_key"
        android:title="@string/shared_preferences_server_url_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <com.kynetics.uf.android.ui.preferences.EditTextValidateNotEmptyPreference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_tenant_key"
        android:title="@string/shared_preferences_tenant_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <com.kynetics.uf.android.ui.preferences.EditTextValidateNotEmptyPreference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_controller_id_key"
        android:title="@string/shared_preferences_controller_id_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/shared_preferences_target_token_key"
        android:title="@string/shared_preferences_target_token_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <Preference
        android:inputType="textPassword"
        android:key="@string/shared_preferences_target_token_received_from_server_key"
        android:title="@string/shared_preferences_target_token_received_from_server_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/shared_preferences_gateway_token_key"
        android:title="@string/shared_preferences_gateway_token_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/shared_preferences_api_mode_key"
        android:title="@string/shared_preferences_api_mode_title" />

    <Preference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_current_state_key"
        android:title="@string/shared_preferences_current_state_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <Preference
        android:key="@string/shared_preferences_system_update_type_key"
        android:title="@string/shared_preferences_system_update_type_title" />

    <PreferenceCategory
        android:title="@string/force_update_label">
        <com.kynetics.uf.android.ui.preferences.EditTextValidateSchedulePreference
            android:key="@string/shared_preferences_time_windows_cron_expression_key"
            android:title="@string/shared_preferences_schedule_update_title"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <com.kynetics.uf.android.ui.preferences.NumbersPreference
            android:defaultValue="3600"
            android:title="@string/time_windows_size_label"
            android:inputType="number"
            android:key="@string/shared_preferences_time_windows_duration_key" />
    </PreferenceCategory>


</PreferenceScreen>
